Black space covering admin bar menu on mobile devices - FIXED

--- a/assets/css/partials/_containers.scss
+++ b/assets/css/partials/_containers.scss
@@ -3,3 +3,13 @@ body{
     position: relative;
   }
 }
+
+@media screen and ( max-width: 782px ) {
+	.admin-bar #wpadminbar {
+		top: -46px;
+	}
+
+	html.mm-opened .admin-bar #wpadminbar {
+		top: 0px;
+	}
+}
